# PaulGirault_EdouardLafarge_projetC

./: CMakeLists.txt  bmp24.c  bmp24.h  bmp8_couleur.c  bmp8_couleur.h  bmp8_niveau_de_gris.c  bmp8_niveau_de_gris.h  main.c  menu.c  menu.h
